--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{  "homepage": "http://Ajhar17103.github.io/hulusthul",
+{  "homepage": "https://Ajhar17103.github.io/hulusthul",
   "name": "vidoe",
   "version": "0.1.0",
   "private": true,
